--- a/style.css
+++ b/style.css
@@ -107,21 +107,21 @@ body {
 
 #sidebar {
     position: fixed;
-    left: 4%;
     top: 90px;
     text-align: left;
+    margin-left: -15px;
     z-index: 10;
 }
 
 #main {
     position: relative;
-    width: 95%;
-    margin-left: 4%;
+    width: 1280px;
+    margin: 0 auto;
     text-align: left;
 }
 
 #content {
-    margin-left: 160px;
+    margin-left: 145px;
     font-size: 0;
 }
 
@@ -207,7 +207,11 @@ body {
 
 .title {
     position: relative;
-    display: block;
+    width: 610px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+}
+.titleText {
     padding-top: 20px;
 }
 
@@ -313,7 +317,7 @@ body {
 
 .launchLine {
     position: absolute;
-    top: 0;
+    top: -1px;
 }
 
 .summary {
@@ -321,7 +325,9 @@ body {
 }
 
 .gallery {
-    margin-left: 190px !important;
+    width: 930px;
+    margin-bottom: 30px;
+    margin-left: 190px;
 }
 
 .gallery img {
@@ -406,4 +412,26 @@ body {
 
 .topPad {
     padding-top: 12px;
+}
+
+
+/* MEDIA BREAK POINTS */
+
+@media (max-width:1330px){
+    #main {
+        width: 1120px;
+    }
+    .summary {
+        visibility: hidden;
+        display: none;
+    }
+    .gallery {
+        width: 770px;
+    }
+    .launch {
+        margin-left: 350px !important;
+    }
+}
+@media (min-width:750px) and (max-width:999px){
+
 }
